Avanzado hasta galeria

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
                     <a id="opcion_nav1" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#nosotros">
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="opcion_nav2" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
+                    <a id="opcion_nav2" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#noticias">
                         <li class="">Noticias</li>
+                    </a>
+                    <a id="opcion_nav5" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#galeria">
+                        <li class="">Galeria</li>
                     </a>
                     <a id="opcion_nav3" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Talleres</li>
@@ -85,8 +88,11 @@
                     <a id="nosotros_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#nosotros">
                         <li class="">Nosotros</li>
                     </a>
-                    <a id="noticias_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="noticias_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#noticias">
                         <li class="">Noticias</li>
+                    </a>
+                    <a id="galeria_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                        <li class="">Galeria</li>
                     </a>
                     <a id="tallere_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
                         <li class="">Talleres</li>
@@ -126,7 +132,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -134,7 +140,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Jesús de la Cruz</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Natación</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Maestro de natación con amplia experiencia. Su paciencia y enfoque personalizado crean un ambiente seguro que ayuda a los estudiantes a ganar confianza en el agua.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -142,7 +148,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Sofía Quispe</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesora de Ballet</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Conoce a Sofía, profesora de ballet apasionada. Su técnica inspira a los alumnos a desarrollar gracia y disciplina en un entorno motivador y acogedor.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -150,7 +156,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
                         </div>
                         <div class="swiper-slide">
                             <div class="320px:w-32 320px:h-32 320px:m-auto 320px:mb-3 1400px:w-48 1400px:h-48">
@@ -158,7 +164,7 @@
                             </div>
                             <h4 class="320px:font-bree_bold 320px:text-center 320px:text-azul_catolica 320px:text-lg 1400px:text-xl">Martín Flores</h4>
                             <h4 class="320px:text-verde_catolica 320px:font-bree_bold 320px:text-center 320px:text-sm 320px:mb-2 1400px:text-lg">Profesor de Teatro</h4>
-                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 1400px:w-80 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
+                            <p class="320px:font-bree_regular 320px:text-gris_catolica_letra 320px:text-sm 320px:w-11/12 320px:text-center 1400px:text-base 320px:mx-auto 1600px:text-lg">Te presentamos a Martín, profesor de teatro lleno de energía. Fomenta la creatividad y la expresión, creando un espacio seguro donde los estudiantes pueden experimentar y crecer.</p>
                         </div>
                     </div>
 
@@ -286,10 +292,31 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
+
+        <section id="galeria" class="320px:my-12 900px:w-900px 940px:w-940px 1360px:w-1300px 900px:mx-auto">
+            <h2 class="320px:text-3xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-4 1100px:text-4xl">Galeria</h2>
+            <div class="320px:flex 320px:flex-wrap 320px:gap-2">
+                <div class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                    <div class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-azul_catolica hover:cursor-pointer"></div>
+                    <img class="w-full h-full object-cover rounded-lg" src="/images/natacion-slider.jpg" alt="Imagen de natación">
+                    <span class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">NATACIÓN</span>
+                </div>
+                <div class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                    <div class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-verde_catolica hover:cursor-pointer"></div>
+                    <img class="w-full h-full object-cover rounded-lg" src="/images/teatro_niños_1.jpg" alt="Imagen de teatro">
+                    <span class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">TEATRO</span>
+                </div>
+                <div class="320px:relative 320px:w-72 820px:w-96 320px:h-72 820px:h-80 320px:mx-auto 320px:rounded-lg">
+                    <div class="320px:absolute 320px:w-full 320px:h-full rounded-lg 320px:bg-black 320px:opacity-70 transition duration-300 hover:bg-amarillo_catolica hover:cursor-pointer"></div>
+                    <img class="w-full h-full object-cover rounded-lg" src="/images/ballet-slider.jpg" alt="Imagen de ballet">
+                    <span class="320px:absolute 320px:text-white 320px:top-1/2 320px:left-1/2 320px:transform 320px:-translate-x-1/2 320px:-translate-y-1/2 320px:font-helvetic 320px:text-2xl">BALLET</span>
+                </div>
+            </div>
+        </section>
     </main>
-    <div class="fixed 320px:w-14 1400px:w-16 320px:right-4 1400px:right-8 1500px:w-20 1400px:bottom-6 320px:bottom-5 320px:z-40">
+    <div class="fixed 320px:w-14 1400px:w-16 320px:right-4 1400px:right-8 1500px:w-20 1400px:bottom-6 320px:bottom-5 320px:z-50">
         <a href="#" target="_blank" rel="noopener noreferrer">
-            <img class="animate__animated animate__pulse animate__infinite" src="/icons/whatsapp original.png" alt="Icono de Whatsapp">
+            <img class="animate__animated animate__pulse animate__infinite" src="/icons/wsp_original.png" alt="Icono de Whatsapp">
         </a>
     </div>
     <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
