diseñando la seccion de talleres y costos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <li class="">Galeria</li>
                     </a>
                     <a id="opcion_nav3" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
-                        <li class="">Talleres</li>
+                        <li class="">Talleres y Costos</li>
                     </a>
                     <a id="opcion_nav4" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
                         <li class="">Contáctanos</li>
@@ -95,7 +95,7 @@
                         <li class="">Galeria</li>
                     </a>
                     <a id="tallere_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
-                        <li class="">Talleres</li>
+                        <li class="">Talleres y Costos</li>
                     </a>
                     <a id="contactanos_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
                         <li class="">Contáctanos</li>
@@ -313,6 +313,73 @@
                 </div>
             </div>
         </section>
+
+        <section id="talleres_costos" class="320px:mb-7">
+            <h2 class="320px:text-3xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-4 1100px:text-4xl">Talleres y Costos</h2>
+            <h3 class="text-verde_catolica 320px:font-bree_bold 320px:text-2xl 320px:text-center">Natación</h3>
+            <div class="320px:flex 320px:flex-wrap 320px:gap-3 320px:justify-center">
+                <div id="nat_aquabebe" class="320px:w-72 320px:h-24 320px:rounded-lg 320px:relative 320px:overflow-hidden hover:cursor-pointer">
+                    <div class="w-full h-full relative">
+                        <img class="w-full h-full object-cover" src="images/adolescente-nadando.jpg" alt="">
+                        <div class="w-full h-full bg-black opacity-70 absolute top-0 left-0"></div>
+                        <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-center items-center">
+                            <span class="text-white font-bree_bold text-2xl">Aquabebé</span>
+                            <span class="text-white font-bree_regular text-sm">(8 meses a 3 años)</span>
+                        </div>
+                    </div>
+                    <div id="natdet_aquabebe" class="320px:absolute 320px:flex 320px:items-center 320px:justify-center 320px:top-0 transition-all duration-300 320px:left-0 w-full 320px:h-0 overflow-hidden bg-azul_catolica opacity-90">
+                        <a class="" href="#">
+                            <button class="text-white 320px:border-2 320px:px-6 320px:py-1 320px:border-white 320px:rounded-lg font-bree_regular">Ver detalles</button>
+                        </a>
+                    </div>
+                </div>
+                <div id="nat_menores_1" class="320px:w-72 320px:h-24 320px:rounded-lg 320px:relative 320px:overflow-hidden hover:cursor-pointer">
+                    <div class="w-full h-full relative">
+                        <img class="w-full h-full object-cover" src="images/adulta-sonriendo.jpg" alt="">
+                        <div class="w-full h-full bg-black opacity-70 absolute top-0 left-0"></div>
+                        <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-center items-center">
+                            <span class="text-white font-bree_bold text-2xl">Menores 1</span>
+                            <span class="text-white font-bree_regular text-sm">(4 a 6 años)</span>
+                        </div>
+                    </div>
+                    <div id="natdet_menores_1" class="320px:absolute 320px:flex 320px:items-center 320px:justify-center 320px:top-0 transition-all duration-300 320px:left-0 w-full 320px:h-0 overflow-hidden bg-azul_catolica opacity-90">
+                        <a class="" href="#">
+                            <button class="text-white 320px:border-2 320px:px-6 320px:py-1 320px:border-white 320px:rounded-lg font-bree_regular">Ver detalles</button>
+                        </a>
+                    </div>
+                </div>
+                <div id="nat_menores_2" class="320px:w-72 320px:h-24 320px:rounded-lg 320px:relative 320px:overflow-hidden hover:cursor-pointer">
+                    <div class="w-full h-full relative">
+                        <img class="w-full h-full object-cover" src="images/niña-buceando.jpg" alt="">
+                        <div class="w-full h-full bg-black opacity-70 absolute top-0 left-0"></div>
+                        <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-center items-center">
+                            <span class="text-white font-bree_bold text-2xl">Menores 2</span>
+                            <span class="text-white font-bree_regular text-sm">(7 a 14 años)</span>
+                        </div>
+                    </div>
+                    <div id="natdet_menores_2" class="320px:absolute 320px:flex 320px:items-center 320px:justify-center 320px:top-0 transition-all duration-300 320px:left-0 w-full 320px:h-0 overflow-hidden bg-azul_catolica opacity-90">
+                        <a class="" href="#">
+                            <button class="text-white 320px:border-2 320px:px-6 320px:py-1 320px:border-white 320px:rounded-lg font-bree_regular">Ver detalles</button>
+                        </a>
+                    </div>
+                </div>
+                <div id="nat_adultos" class="320px:w-72 320px:h-24 320px:rounded-lg 320px:relative 320px:overflow-hidden hover:cursor-pointer">
+                    <div class="w-full h-full relative">
+                        <img class="w-full h-full object-cover" src="images/niño-aprendiendo-a-nadar.jpg" alt="">
+                        <div class="w-full h-full bg-black opacity-70 absolute top-0 left-0"></div>
+                        <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-center items-center">
+                            <span class="text-white font-bree_bold text-2xl">Jóvenes y Adultos</span>
+                            <span class="text-white font-bree_regular text-sm">(15 años en adelante)</span>
+                        </div>
+                    </div>
+                    <div id="natdet_adultos" class="320px:absolute 320px:flex 320px:items-center 320px:justify-center 320px:top-0 transition-all duration-300 320px:left-0 w-full 320px:h-0 overflow-hidden bg-azul_catolica opacity-90">
+                        <a class="" href="#">
+                            <button class="text-white 320px:border-2 320px:px-6 320px:py-1 320px:border-white 320px:rounded-lg font-bree_regular">Ver detalles</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <div class="fixed 320px:w-14 1400px:w-16 320px:right-4 1400px:right-8 1500px:w-20 1400px:bottom-6 320px:bottom-5 320px:z-50">
         <a href="#" target="_blank" rel="noopener noreferrer">
@@ -324,5 +391,6 @@
     <script src="/js/nav.js"></script>
     <script src="/node_modules/smooth-scroll/dist/smooth-scroll.min.js"></script>
     <script src="js/scroll.js"></script>
+    <script src="/js/animated.js"></script>
 </body>
 </html>
