subiedno cambiso hechos a galeria y costos

--- a/index.html
+++ b/index.html
@@ -293,40 +293,38 @@
             </div>
         </section>
 
-        <section id="galeria" class="320px:my-12 900px:w-900px 940px:w-940px 1360px:w-1300px 900px:mx-auto">
+        <section id="galeria" class="320px:my-12 900px:w-900px 1000px:w-1000px 900px:mx-auto">
             <h2 class="320px:text-3xl 320px:font-bree_bold 320px:text-azul_catolica 320px:text-center 320px:mb-4 1100px:text-4xl">Galeria</h2>
             <div class="320px:flex 320px:flex-wrap 320px:gap-5">
-                <div class="320px:relative 320px:w-64 320px:h-80 320px:mx-auto 320px:rounded-lg">
+                <div class="320px:relative 320px:w-64 700px:w-80 700px:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="gal_natacion" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/ballet-slider.jpg" alt="imagenes galeria">
-                        </div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
-                    <button class="320px:bg-blue-600 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 320px:rounded-b-lg">Ver Galeria - Natación</button>
-                </div>
-                <div class="320px:relative 320px:w-64 320px:h-80 320px:mx-auto 320px:rounded-lg">
-                    <div id="gal_ballet" class="swiper 320px:w-full 320px:h-full">
-                        <div class="swiper-wrapper">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/ballet-slider.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/ballet-slider.jpg" alt="imagenes galeria">
                         </div>
                     </div>
-                    <button class="320px:bg-blue-600 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 320px:rounded-b-lg">Ver Galeria - Ballet</button>
+                    <button class="320px:bg-azul_catolica hover:320px:bg-blue-500 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Natación</button>
                 </div>
-                <div class="320px:relative 320px:w-64 320px:h-80 320px:mx-auto 320px:rounded-lg">
+                <div class="320px:relative 320px:w-64 700px:w-80 700px:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg">
                     <div id="gal_teatro" class="swiper 320px:w-full 320px:h-full">
                         <div class="swiper-wrapper">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
-                            <img class="320px:w-full 320px:h-full 320px:object-cover 320px:rounded-lg" src="/images/ballet-slider.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/ballet-slider.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
                         </div>
                     </div>
-                    <button class="320px:bg-blue-600 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 320px:rounded-b-lg">Ver Galeria - Teatro</button>
+                    <button class="320px:bg-verde_catolica hover:320px:bg-hover_verde_catolica duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:text-white 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Teatro</button>
+                </div>
+                <div class="320px:relative 320px:w-64 700px:w-80 700px:h-96 320px:h-80 320px:mx-auto 320px:rounded-lg">
+                    <div id="gal_ballet" class="swiper 320px:w-full 320px:h-full">
+                        <div class="swiper-wrapper">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/ballet-slider.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/adulto-sonriendo.jpg" alt="imagenes galeria">
+                            <img class="swiper-slide 320px:w-full 320px:h-full 320px:object-cover 320px:rounded-ee-3xl 320px:rounded-ss-3xl" src="/images/niño-sonriendo.jpg" alt="imagenes galeria">
+                        </div>
+                    </div>
+                    <button class="320px:bg-amarillo_catolica hover:320px:bg-yellow-200 hover:cursor-pointer duration-300 320px:absolute 320px:w-full 320px:left-0 320px:bottom-0 320px:z-20 320px:font-bree_regular 320px:py-1 rounded-ee-3xl">Ver Galeria - Ballet</button>
                 </div>
             </div>
         </section>
